// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepTwo should render StepTwo for Dutch Auction strategy 1`] = `
<div>
  <section
    className="lo-MenuBarAndContent"
  >
    <div
      className="st-StepNavigation"
    >
      <a
        className="sw-LogoWhite"
        href="/"
        onClick={[Function]}
      />
      <div
        className="st-StepNavigation_Container"
      >
        <div
          className="st-StepNavigation_StepContainer
        active"
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Crowdsale Strategy
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        active"
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Token Setup
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        "
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Crowdsale Setup
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        "
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Publish
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        "
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Crowdsale Page
          </span>
        </div>
      </div>
    </div>
    <div
      className="st-StepContent"
    >
      <div
        className="st-StepContent_Info"
      >
        <div
          className="st-StepContent_InfoIcon st-StepContent_InfoIcon-step2"
        />
        <div
          className="st-StepContentInfo_InfoText"
        >
          <h1
            className="st-StepContent_InfoTitle"
          >
            Token setup
          </h1>
          <p
            className="st-StepContent_InfoDescription"
          >
            Configure properties for your token. Created token contract will be ERC-20 compatible.
          </p>
        </div>
      </div>
      <form
        className="st-StepContent_FormFullHeight"
        id="tokenData"
        onSubmit={[Function]}
      >
        <div
          className="sw-BorderedBlock sw-BorderedBlock-2Rows2Columns"
        >
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Name
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  The name of your token. Will be used by Etherscan and other tokenbrowsers. Be afraid of trademarks.
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Ticker
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  The five letter ticker for your token. There are 11,881,376 combinations for 26 english letters. Be hurry.
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              id="ticker"
              name="ticker"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Decimals
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  Refers to how divisible a token can be, from 0 (not at all divisible) to 18 (pretty much continuous).
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              disabled={false}
              id="decimals"
              max="18"
              min="0"
              name="decimals"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="number"
              value=""
            />
          </div>
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Supply
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  The total supply of the token
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              id="supply"
              name="supply"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="st-StepContent_Buttons"
        >
          <button
            className="sw-ButtonBack"
            onClick={[Function]}
            type="button"
          >
            Back
          </button>
          <button
            className="sw-ButtonContinue"
            disabled={true}
            type="submit"
          >
            <span
              className="sw-ButtonContinue_Text"
            >
              Continue
            </span>
          </button>
        </div>
      </form>
    </div>
  </section>
</div>
`;

exports[`StepTwo should render StepTwo for Minted Capped strategy 1`] = `
<div>
  <section
    className="lo-MenuBarAndContent"
  >
    <div
      className="st-StepNavigation"
    >
      <a
        className="sw-LogoWhite"
        href="/"
        onClick={[Function]}
      />
      <div
        className="st-StepNavigation_Container"
      >
        <div
          className="st-StepNavigation_StepContainer
        active"
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Crowdsale Strategy
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        active"
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Token Setup
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        "
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Crowdsale Setup
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        "
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <div
            className="st-StepNavigation_StepLine"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Publish
          </span>
        </div>
        <div
          className="st-StepNavigation_StepContainer
        "
        >
          <div
            className="st-StepNavigation_StepCircle"
          />
          <span
            className="st-StepNavigation_StepText"
          >
            Crowdsale Page
          </span>
        </div>
      </div>
    </div>
    <div
      className="st-StepContent"
    >
      <div
        className="st-StepContent_Info"
      >
        <div
          className="st-StepContent_InfoIcon st-StepContent_InfoIcon-step2"
        />
        <div
          className="st-StepContentInfo_InfoText"
        >
          <h1
            className="st-StepContent_InfoTitle"
          >
            Token setup
          </h1>
          <p
            className="st-StepContent_InfoDescription"
          >
            Configure properties for your token. Created token contract will be ERC-20 compatible.
          </p>
        </div>
      </div>
      <form
        className="st-StepContent_FormFullHeight"
        id="tokenData"
        onSubmit={[Function]}
      >
        <div
          className="sw-BorderedBlock sw-BorderedBlock-3Columns"
        >
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Name
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  The name of your token. Will be used by Etherscan and other tokenbrowsers. Be afraid of trademarks.
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              id="name"
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Ticker
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  The five letter ticker for your token. There are 11,881,376 combinations for 26 english letters. Be hurry.
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              id="ticker"
              name="ticker"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
          <div
            className="sw-InputField "
          >
            <div
              className="sw-FormControlTitle"
            >
              <label
                className="sw-FormControlTitle_Label"
              >
                Decimals
              </label>
              <div
                className="sw-FormControlTitle_Info"
                tabIndex="-1"
              >
                <span
                  className="sw-FormControlTitle_Tooltip"
                >
                  Refers to how divisible a token can be, from 0 (not at all divisible) to 18 (pretty much continuous).
                </span>
              </div>
            </div>
            <input
              className="sw-TextField"
              disabled={false}
              id="decimals"
              max="18"
              min="0"
              name="decimals"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="number"
              value=""
            />
          </div>
        </div>
        <div
          className="st-StepContent_Buttons"
        >
          <button
            className="sw-ButtonBack"
            onClick={[Function]}
            type="button"
          >
            Back
          </button>
          <button
            className="sw-ButtonContinue"
            disabled={true}
            type="submit"
          >
            <span
              className="sw-ButtonContinue_Text"
            >
              Continue
            </span>
          </button>
        </div>
      </form>
    </div>
  </section>
</div>
`;
